tests/NormalTests/paczka1/small_fuzzy/57463247.err
Error in line 4: 1VVPGzJl2 A516 47,3
Error in line 5: 1VVPGzJl2 A322 57,5
Error in line 7: BpZqxG5qhMx A253 39,4
Error in line 15: BpZqxG5qhMx A516 28,5
